--- a/public/web/app/modules/todos/list/_list.scss
+++ b/public/web/app/modules/todos/list/_list.scss
@@ -1,3 +1,16 @@
-.list {
+.todos li {
+	transition: all 1s;
+	&.ng-enter {
+		opacity: 0;
+	}
+	&.ng-enter-active {
+		opacity: 1;
+	}
+	&.ng-leave {
+		opacity: 1;
+	}
+	&.ng-leave-active {
+		opacity: 0;
+	}
 
 }
